Alterações de repositorio

--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConn":"Data Source=BancoAtlantico.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
