--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@microsoft/signalr": "^5.0.8",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta3",
     "rxjs": "~6.6.0",
